--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,11 @@
     "iron-pages": "polymerelements/iron-pages#^1.0.0",
     "iron-selector": "polymerelements/iron-selector#^1.0.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#~1.1.1",
-    "polymer": "polymer/polymer#^1.4.0"
+    "polymer": "polymer/polymer#^1.4.0",
+    "polymerfire": "firebase/polymerfire#^0.9.4",
+    "note-app-elements": "polymerlabs/note-app-elements",
+    "paper-dialog": "PolymerElements/paper-dialog#^1.1.0",
+    "iron-ajax": "PolymerElements/iron-ajax#^1.4.3"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
